# python_tutorials_notebook

./: LICENSE  Python Notebook | Beginner.ipynb  README.md  def_NN.txt  pyproject.toml
.ipynb_checkpoints/: Python Notebook | Intermediate | Part 1-checkpoint.ipynb
Python/: Python Notebook - Advanced - Pandas.ipynb  Python Notebook - Beginner.ipynb  Python Notebook - Intermediate - Part 1.ipynb  Python Notebook - Intermediate - Part 2.ipynb  Python Notebook | Beginner.ipynb  Python Notebook | Intermediate | Part 1.ipynb  Python Notebook | Intermediate | Part 2.ipynb  joker.txt
Python/.ipynb_checkpoints/: Python Notebook - Beginner-checkpoint.ipynb  Python Notebook | Advanced | NumPy-checkpoint.ipynb  Python Notebook | Beginner-checkpoint.ipynb  Python Notebook | Intermediate | Part 2-checkpoint.ipynb
Python/data/: joker.txt
data/: googleplaystore.csv:Zone.Identifier  googleplaystore_user_reviews.csv:Zone.Identifier  numpy_sample.npy
data_science/: NumPy.ipynb  Pandas.ipynb
python/: Python Notebook - Advanced - Part 1.ipynb  Python Notebook - Advanced.ipynb  Python Notebook - Beginner.ipynb  Python Notebook - Intermediate - Part 1.ipynb  Python Notebook - Intermediate - Part 2.ipynb
