[tool.poetry]
name = "python_tutorial"
version = "0.1.0"
description = "Relevant packages for studying pythons"
authors = ["Tamoghna Saha"]

[tool.poetry.dependencies]
python = "3.8"
pandas = "^1.4.3"
numpy = "^1.23.2"
scipy = "^1.9.0"
jupyter-black = "^0.3.1"
jupyter = "^1.0.0"
tabulate = "0.8.10"
termcolor = "2.0.1"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
